package model.solicitud;

// Interfaz del patrón Observer.

public interface IObservador {
    void actualizar(Solicitud solicitud);
}
