@startuml
skinparam linetype ortho
skinparam classAttributeIconSize 0

package "app" {
  class MainApp {
    - sistemaBarrio: SistemaBarrio
    - residentes: ObservableList<Residente>
    - visitantes: ObservableList<Visitante>
    - solicitudes: ObservableList<Solicitud>
    - accesos: ObservableList<Acceso>
    - usuarioActual: UsuarioSistema
    - residenteActual: Residente
    + start(stage: Stage): void
    + main(args: String[]): void
  }
}

package "app.views" {
  class LoginView {
    ' COMPLETAR: Agregar componentes JavaFX y métodos
    - sistemaBarrio: SistemaBarrio
    + mostrar(): void
  }
  class AdministradorView {
    ' COMPLETAR: Agregar componentes JavaFX y métodos
  }
  class ResidenteView {
    ' COMPLETAR: Agregar componentes JavaFX y métodos
  }
}

package "sistema" {
  class SistemaBarrio {
    - barrios: List<Barrio>
    - viviendas: List<Vivienda>
    - residentes: List<Residente>
    - visitantes: List<Visitante>
    - solicitudes: List<Solicitud>
    - accesos: List<Acceso>
    - notificaciones: List<Notificacion>
    - observadoresGlobales: List<IObservador>
    - administradores: List<Administrador>
    - usuarios: List<UsuarioSistema>
    - persistenciaActiva: boolean
    - emitirNotificaciones: boolean
    + registrarBarrio(nombre: String, direccion: String): Barrio
    + registrarVivienda(barrio: Barrio, lote: String, direccion: String): Vivienda
    + registrarResidente(nombre: String, apellido: String, dni: String, email: String, telefono: String, vivienda: Vivienda): Residente
    + actualizarResidente(residente: Residente, nombre: String, apellido: String, dni: String, email: String, telefono: String, lote: String, direccion: String): void
    + registrarVisitante(residente: Residente, nombre: String, dni: String, patente: String, motivoVisita: String, tipo: String, frecuencia: String): Visitante
    + actualizarVisitante(visitante: Visitante, nombre: String, dni: String, patente: String, motivoVisita: String, tipo: String, frecuencia: String): void
    + eliminarVisitante(visitante: Visitante): void
    + crearReclamo(nombre: String, descripcion: String, prioridad: String, tipoReclamo: String): Reclamo
    + crearTareaMantenimiento(nombre: String, descripcion: String, prioridad: String, sector: String): TareaMantenimiento
    + crearIncidenteSeguridad(nombre: String, descripcion: String, prioridad: String, nivelRiesgo: String): IncidenteSeguridad
    + avanzarEstadoSolicitud(solicitud: Solicitud): void
    + cancelarSolicitud(solicitud: Solicitud): void
    + registrarAcceso(nombreVisitante: String, dniVisitante: String): Acceso
    + registrarEgresoAcceso(acceso: Acceso): void
    + buscarAccesoActivoPorDni(dniVisitante: String): Acceso
    + notificar(mensaje: String, destinatario: String): Notificacion
    + cargarDesdeJson(): void
    + autenticarUsuario(email: String, password: String): UsuarioSistema
    + crearCuentaResidenteSiNoExiste(residente: Residente, claveInicial: String): void
  }

  class UsuarioSistema {
    - email: String
    - password: String
    - rol: String
    - residenteId: Integer
    + esResidente(): boolean
  }
}

package "model.barrio" {
  class Barrio {
    - id: int
    - nombre: String
    - direccion: String
    - viviendas: List<Vivienda>
    + agregarVivienda(vivienda: Vivienda): void
    + listarViviendas(): List<Vivienda>
  }

  class Vivienda {
    - id: int
    - lote: String
    - direccion: String
    - residentes: List<Residente>
    + agregarResidente(residente: Residente): void
    + obtenerResidentes(): List<Residente>
  }

  class Residente {
    - id: int
    - nombre: String
    - apellido: String
    - dni: String
    - email: String
    - telefono: String
    - vivienda: Vivienda
    - visitantes: List<Visitante>
    + registrarVisitante(visitante: Visitante): void
    + crearReclamo(descripcion: String): void
  }
}

package "model.accesos" {
  class Visitante {
    - id: int
    - nombre: String
    - dni: String
    - patente: String
    - motivoVisita: String
    - tipo: String
    - frecuencia: String
    + mostrarDatos(): String
  }

  class Acceso {
    - id: int
    - nombreVisitante: String
    - dniVisitante: String
    - fechaIngreso: LocalDateTime
    - fechaEgreso: LocalDateTime
    + registrarIngreso(): void
    + registrarEgreso(): void
    + estaActivo(): boolean
  }
}

package "model.solicitud" {
  abstract class Solicitud {
    + id: int
    - nombre: String
    - descripcion: String
    - prioridad: String
    - fechaCreacion: LocalDate
    - estado: IEstadoSolicitud
    - observadores: List<IObservador>
    + avanzar(): void
    + cancelar(): void
    + mostrarEstado(): void
    + agregarObservador(observador: IObservador): void
    + quitarObservador(observador: IObservador): void
    + notificarObservadores(): void
  }

  interface IObservador {
    + actualizar(solicitud: Solicitud): void
  }

  class SolicitudFactory {
    + crearSolicitud(tipo: String, id: int, nombre: String, descripcion: String, prioridad: String, datoExtra: String): Solicitud
  }
}

package "model.solicitud.estados" {
  interface IEstadoSolicitud {
    + avanzar(solicitud: Solicitud): void
    + cancelar(solicitud: Solicitud): void
    + mostrarNombreEstado(): String
  }

  class EstadoPendiente {
  }

  class EstadoAsignado {
  }

  class EstadoEnProceso {
  }

  class EstadoResuelto {
  }

  class EstadoCerrado {
  }
}

package "model.solicitud.reclamo" {
  class Reclamo {
    - tipoReclamo: String
  }
}

package "model.solicitud.personal" {
  class TareaMantenimiento {
    - sector: String
  }

  class IncidenteSeguridad {
    - nivelRiesgo: String
  }

  class PersonalMantenimiento {
    - id: int
    - nombre: String
    - sector: String
    + consultarTarea(tarea: TareaMantenimiento): void
    + actualizarEstadoTarea(tarea: TareaMantenimiento): void
  }

  class PersonalSeguridad {
    - id: int
    - nombre: String
    - turno: String
    + controlarAcceso(acceso: Acceso): void
    + registrarEgreso(acceso: Acceso): void
    + reportarIncidente(incidente: IncidenteSeguridad): void
  }
}

package "model" {
  class Administrador {
    - id: int
    - nombre: String
    - email: String
    + actualizar(solicitud: Solicitud): void
  }
}

package "model.notificaciones" {
  class Notificacion {
    - id: int
    - mensaje: String
    - fecha: LocalDateTime
    - destinatario: String
    + enviar(): void
  }
}

' Relaciones principales

MainApp --> SistemaBarrio
MainApp --> LoginView
MainApp --> AdministradorView
MainApp --> ResidenteView
MainApp --> UsuarioSistema

SistemaBarrio *-- UsuarioSistema
SistemaBarrio o-- Barrio
SistemaBarrio o-- Vivienda
SistemaBarrio o-- Residente
SistemaBarrio o-- Visitante
SistemaBarrio o-- Solicitud
SistemaBarrio o-- Acceso
SistemaBarrio o-- Notificacion
SistemaBarrio o-- Administrador
SistemaBarrio ..> SolicitudFactory

Barrio "1" o-- "*" Vivienda
Vivienda "1" o-- "*" Residente
Residente "1" o-- "*" Visitante

Solicitud <|-- Reclamo
Solicitud <|-- TareaMantenimiento
Solicitud <|-- IncidenteSeguridad

PersonalSeguridad ..> Acceso
PersonalSeguridad ..> IncidenteSeguridad
PersonalMantenimiento ..> TareaMantenimiento

Solicitud --> IEstadoSolicitud
IEstadoSolicitud <|.. EstadoPendiente
IEstadoSolicitud <|.. EstadoAsignado
IEstadoSolicitud <|.. EstadoEnProceso
IEstadoSolicitud <|.. EstadoResuelto
IEstadoSolicitud <|.. EstadoCerrado

Solicitud --> IObservador
Administrador ..|> IObservador

SolicitudFactory ..> Reclamo
SolicitudFactory ..> TareaMantenimiento
SolicitudFactory ..> IncidenteSeguridad
@enduml